--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
                         <p class="text-gray-500 text-sm">Sistema de Gestão de Estoque</p>
                     </div>
                 </div>
-                <nav class="hidden md:flex space-x-8">
+                <nav class="hidden md:flex space-x-8 items-center">
                     <a data-scroll="projeto" class="text-gray-600 hover:text-indigo-600 transition-colors">Projeto</a>
                     <a data-scroll="funcionalidades" class="text-gray-600 hover:text-indigo-600 transition-colors">Funcionalidades</a>
                     <a data-scroll="tecnologias" class="text-gray-600 hover:text-indigo-600 transition-colors">Tecnologias</a>
                     <a data-scroll="contato" class="text-gray-600 hover:text-indigo-600 transition-colors">Contato</a>
+                    <a href="/admin/index.html" class="ml-6 bg-indigo-600 text-white px-4 py-2 rounded-lg font-medium hover:bg-indigo-700 transition-colors shadow">Login</a>
                 </nav>
             </div>
         </div>
