--- a/index.html
+++ b/index.html
@@ -377,6 +377,16 @@
           }
         });
       }
+
+      // Toggle menu mobile
+      window.toggleMobileMenu = function() {
+        const menu = document.getElementById('mobileMenu');
+        if (menu.classList.contains('hidden')) {
+          menu.classList.remove('hidden');
+        } else {
+          menu.classList.add('hidden');
+        }
+      };
     });
   </script>
 </body>
