--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <script src="js/config.js"></script>
     <script src="js/main.js"></script>
-    <script src="login/login.js"></script>
+    <script src="js/login.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BARCODER'S - Gestão de Estoque Amemiya</title>
