adicionado endpoint da API no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <script>
+      var API_ENDPOINT = 'https://barcoders.azurewebsites.net';
+    </script>
     <script src="js/config.js"></script>
     <script src="js/main.js"></script>
     <script src="js/login.js"></script>
