--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>BARCODER'S - Gestão de Estoque Amemiya</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="assets/img/logo_amemiya.png">
+    <link rel="icon" href="assets/img/logo_barcoders.jpg">
 </head>
 <body class="bg-gray-50 smooth-scroll">
   <!-- Header -->
